--- a/Android-Contributions/Note-Keeping-App/app/src/main/res/layout/activity_main.xml
+++ b/Android-Contributions/Note-Keeping-App/app/src/main/res/layout/activity_main.xml
@@ -4,29 +4,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/light_purple"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/add_note_view"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/add_note_view_layout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
+        app:startIconDrawable="@drawable/ic_edit"
         android:layout_height="wrap_content"
-        android:inputType="text"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="10dp"
+        app:boxBackgroundColor="@color/white"
+        app:boxStrokeWidth="2dp"
         app:layout_constraintBottom_toTopOf="@+id/my_recycler_view"
         app:layout_constraintEnd_toStartOf="@+id/add_button"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:colorActivatedHighlight="@color/dark_purple"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/add_note_view"
+            android:layout_width="match_parent"
+            android:textSize="20sp"
+            android:layout_height="wrap_content"
+            android:hint="New Note Title ..."
+            android:inputType="text"
+            android:textColor="@color/dark_purple" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
 
     <ImageButton
         android:id="@+id/add_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
         android:onClick="addNewNote"
-        android:src="@drawable/ic_baseline_add_circle_24"
+        android:backgroundTint="@color/purple"
+        android:background="@drawable/ic_add"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/add_note_view"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@id/add_note_view_layout"
+        app:layout_constraintStart_toEndOf="@+id/add_note_view_layout"
+        app:layout_constraintTop_toTopOf="@id/add_note_view_layout" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/my_recycler_view"
@@ -34,7 +55,8 @@
         android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:padding="6dp"
+        tools:listitem="@layout/note_item"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/add_note_view" />
+        app:layout_constraintTop_toBottomOf="@+id/add_note_view_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
