--- a/Android-Contributions/Note-Keeping-App/app/src/main/res/layout/note_item.xml
+++ b/Android-Contributions/Note-Keeping-App/app/src/main/res/layout/note_item.xml
@@ -1,69 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="15dp"
-    app:cardBackgroundColor="@color/beige"
-    android:layout_marginHorizontal="20dp"
-    android:layout_marginVertical="12dp">
+    android:layout_height="match_parent"
+    android:background="@color/light_purple"
+    tools:context=".MainActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/add_note_view_layout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="0dp"
+        app:startIconDrawable="@drawable/ic_edit"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="10dp"
+        app:boxBackgroundColor="@color/white"
+        app:boxStrokeWidth="2dp"
+        app:layout_constraintBottom_toTopOf="@+id/my_recycler_view"
+        app:layout_constraintEnd_toStartOf="@+id/add_button"
+        app:layout_constraintStart_toStartOf="parent"
+        android:colorActivatedHighlight="@color/dark_purple"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/note_title"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textColor="@color/dark_purple"
-            android:textStyle="bold"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/add_note_view"
+            android:layout_width="match_parent"
             android:textSize="20sp"
-            android:text="Note Title"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            android:layout_height="wrap_content"
+            android:hint="New Note Title ..."
+            android:inputType="text"
+            android:textColor="@color/dark_purple" />
 
-        <View
-            android:id="@+id/barrier"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintStart_toStartOf="@id/note_title"
-            app:layout_constraintEnd_toEndOf="@id/note_title"
-            app:layout_constraintTop_toBottomOf="@id/note_title"
-            android:background="@color/purple"/>
-
-        <TextView
-            android:id="@+id/note_date"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textColor="@color/dark_purple"
-            android:textSize="16sp"
-            android:text="Date"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/barrier"
-            app:layout_constraintStart_toStartOf="parent"/>
-
-        <ImageView
-            android:id="@+id/delete_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:src="@drawable/ic_baseline_delete_forever_24"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/purple" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
 
+    <ImageButton
+        android:id="@+id/add_button"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:onClick="addNewNote"
+        android:backgroundTint="@color/purple"
+        android:background="@drawable/ic_add"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/add_note_view_layout"
+        app:layout_constraintStart_toEndOf="@+id/add_note_view_layout"
+        app:layout_constraintTop_toTopOf="@id/add_note_view_layout" />
 
-</androidx.cardview.widget.CardView>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/my_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:padding="6dp"
+        tools:listitem="@layout/note_item"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/add_note_view_layout" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
