--- a/Android-Contributions/MemeShare/app/src/main/res/values/colors.xml
+++ b/Android-Contributions/MemeShare/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="btn_Blue">#0080ff</color>
+    <color name="cream">#EDE7DB</color>
+
 </resources>
